Adding llm_utils.py, revising notebooks to pull from utils file, updating readme

--- a/reqs_extraction/reqs_reviewer.ipynb
+++ b/reqs_extraction/reqs_reviewer.ipynb
@@ -18,20 +18,28 @@
     "\n",
     "#### How to Use\n",
     "\n",
-    "1. Individual cert setup may need to be modified in `setup_clients()` function\n",
-    "2. Run interactive mode in notebook: `result = run_refinement()` \n",
+    "1. Run interactive mode in notebook: `result = run_refinement()` \n",
     "   - Or process directly: `result = refine_requirements(\"path/to/requirements.md\", \"claude\")`\n",
-    "3. Direct notebook to filepath of requirements list of interest\n",
-    "4. The refined requirements will be saved as `revised_reqs_output/{api}_reqs_list_v2_{timestamp}.md`\n",
+    "2. Direct notebook to filepath of requirements list of interest\n",
+    "3. The refined requirements will be saved as `revised_reqs_output/{api}_reqs_list_v2_{timestamp}.md`\n",
     "\n",
     "Notes:\n",
     "- Supports Claude, Gemini, or GPT-4o\n",
-    "- API keys should be in .env file\n"
+    "- API keys should be in .env file\n",
+    "- API configurations are set in llm_utils.py- changes to configurations should be made there\n",
+    "- Individual cert setup may need to be modified in `setup_clients()` function in the llm_utils.py file before running this notebook\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inputs and Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +49,9 @@
     "from pathlib import Path\n",
     "from typing import Dict, Any, Optional\n",
     "from datetime import datetime\n",
+    "import sys\n",
     "\n",
-    "# Import required libraries (ensure these are installed)\n",
     "from dotenv import load_dotenv\n",
-    "import httpx\n",
-    "from tenacity import retry, wait_exponential, stop_after_attempt, retry_if_exception_type\n",
-    "from anthropic import Anthropic, RateLimitError\n",
-    "import google.generativeai as gemini\n",
-    "from openai import OpenAI\n",
     "\n",
     "# Set up logging\n",
     "logging.basicConfig(level=logging.INFO, \n",
@@ -58,17 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-16 11:45:48,302 - root - INFO - Current working directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction\n",
-      "2025-04-16 11:45:48,303 - root - INFO - Project root: /Users/ceadams/Documents/onclaive/onclaive\n",
-      "2025-04-16 11:45:48,303 - root - INFO - Default input directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/processed_output\n",
-      "2025-04-16 11:45:48,304 - root - INFO - Default output directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs\n"
+      "2025-04-30 12:11:10,666 - root - INFO - Current working directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction\n",
+      "2025-04-30 12:11:10,667 - root - INFO - Project root: /Users/ceadams/Documents/onclaive/onclaive\n",
+      "2025-04-30 12:11:10,668 - root - INFO - Default input directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/initial_reqs_output\n",
+      "2025-04-30 12:11:10,668 - root - INFO - Default output directory: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs_output\n"
      ]
     }
    ],
@@ -94,107 +97,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import importlib.util\n",
+    "module_path = os.path.join(PROJECT_ROOT, 'llm_utils.py')\n",
     "\n",
-    "# API Configuration\n",
-    "API_CONFIGS = {\n",
-    "    \"claude\": {\n",
-    "        \"model_name\": \"claude-3-5-sonnet-20241022\",\n",
-    "        \"max_tokens\": 8192,\n",
-    "        \"temperature\": 0.7,\n",
-    "        \"delay_between_requests\": 1\n",
-    "    },\n",
-    "    \"gemini\": {\n",
-    "        \"model\": \"models/gemini-1.5-pro-001\",\n",
-    "        \"max_tokens\": 8192,\n",
-    "        \"temperature\": 0.7,\n",
-    "        \"delay_between_requests\": 2,\n",
-    "        \"timeout\": 60\n",
-    "    },\n",
-    "    \"gpt\": {\n",
-    "        \"model\": \"gpt-4o\",\n",
-    "        \"max_tokens\": 8192,\n",
-    "        \"temperature\": 0.7,\n",
-    "        \"delay_between_requests\": 2\n",
-    "    }\n",
-    "}\n",
-    "\n",
+    "spec = importlib.util.spec_from_file_location(\"llm_utils\", module_path)\n",
+    "llm_utils = importlib.util.module_from_spec(spec)\n",
+    "spec.loader.exec_module(llm_utils)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### API Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# System prompts\n",
     "SYSTEM_PROMPTS = {\n",
     "    \"claude\": \"You are a Healthcare Standards Expert tasked with analyzing and refining FHIR Implementation Guide requirements.\",\n",
     "    \"gemini\": \"Your role is to analyze and refine FHIR Implementation Guide requirements, focusing on making them concise, testable, and conformance-oriented.\",\n",
     "    \"gpt\": \"As a Healthcare Standards Expert, analyze and refine FHIR Implementation Guide requirements to produce a concise, testable requirements list.\"\n",
-    "}\n"
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prompt Development"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def setup_clients():\n",
-    "    \"\"\"Initialize clients for each LLM service\"\"\"\n",
-    "    try:\n",
-    "        # Claude setup\n",
-    "        verify_path = '/opt/homebrew/etc/openssl@3/cert.pem'\n",
-    "        http_client = httpx.Client(\n",
-    "            verify=verify_path if os.path.exists(verify_path) else True,\n",
-    "            timeout=60.0\n",
-    "        )\n",
-    "        claude_client = Anthropic(\n",
-    "            api_key=os.getenv('ANTHROPIC_API_KEY'),\n",
-    "            http_client=http_client\n",
-    "        )\n",
-    "        \n",
-    "        # Gemini setup\n",
-    "        gemini_api_key = os.getenv('GEMINI_API_KEY')\n",
-    "        if not gemini_api_key:\n",
-    "            logger.warning(\"GEMINI_API_KEY not found\")\n",
-    "            gemini_client = None\n",
-    "        else:\n",
-    "            gemini.configure(api_key=gemini_api_key)\n",
-    "            gemini_client = gemini.GenerativeModel(\n",
-    "                model_name=API_CONFIGS[\"gemini\"][\"model\"],\n",
-    "                generation_config={\n",
-    "                    \"max_output_tokens\": API_CONFIGS[\"gemini\"][\"max_tokens\"],\n",
-    "                    \"temperature\": API_CONFIGS[\"gemini\"][\"temperature\"]\n",
-    "                }\n",
-    "            )\n",
-    "        \n",
-    "        # OpenAI setup\n",
-    "        openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "        if not openai_api_key:\n",
-    "            logger.warning(\"OPENAI_API_KEY not found\")\n",
-    "            openai_client = None\n",
-    "        else:\n",
-    "            openai_client = OpenAI(\n",
-    "                api_key=openai_api_key,\n",
-    "                timeout=60.0\n",
-    "            )\n",
-    "        \n",
-    "        return {\n",
-    "            \"claude\": claude_client,\n",
-    "            \"gpt\": openai_client,\n",
-    "            \"gemini\": gemini_client\n",
-    "        }\n",
-    "        \n",
-    "    except Exception as e:\n",
-    "        logger.error(f\"Error setting up clients: {str(e)}\")\n",
-    "        raise\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "def get_requirements_refinement_prompt(requirements_list: str) -> str:\n",
     "    \"\"\"\n",
     "    Create the prompt for refining requirements list\n",
@@ -258,71 +206,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 64,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n",
-    "@retry(\n",
-    "    wait=wait_exponential(multiplier=2, min=4, max=360),\n",
-    "    stop=stop_after_attempt(8),\n",
-    "    retry=retry_if_exception_type((RateLimitError, TimeoutError))\n",
-    ")\n",
-    "def make_api_request(client, api_type: str, content: str) -> str:\n",
-    "    \"\"\"Make API request with retries\"\"\"\n",
-    "    \n",
-    "    config = API_CONFIGS[api_type]\n",
-    "    prompt = get_requirements_refinement_prompt(content)\n",
-    "    \n",
-    "    try:\n",
-    "        if api_type == \"claude\":\n",
-    "            response = client.messages.create(\n",
-    "                model=config[\"model_name\"],\n",
-    "                max_tokens=config[\"max_tokens\"],\n",
-    "                messages=[{\n",
-    "                    \"role\": \"user\", \n",
-    "                    \"content\": prompt\n",
-    "                }],\n",
-    "                system=SYSTEM_PROMPTS[api_type]\n",
-    "            )\n",
-    "            return response.content[0].text\n",
-    "            \n",
-    "        elif api_type == \"gemini\":\n",
-    "            response = client.generate_content(\n",
-    "                prompt,\n",
-    "                generation_config={\n",
-    "                    \"max_output_tokens\": config[\"max_tokens\"],\n",
-    "                    \"temperature\": config[\"temperature\"]\n",
-    "                }\n",
-    "            )\n",
-    "            if hasattr(response, 'text'):\n",
-    "                return response.text\n",
-    "            elif response.candidates:\n",
-    "                return response.candidates[0].content.parts[0].text\n",
-    "            else:\n",
-    "                raise ValueError(\"No response generated from Gemini API\")\n",
-    "                    \n",
-    "        elif api_type == \"gpt\":\n",
-    "            response = client.chat.completions.create(\n",
-    "                model=config[\"model\"],\n",
-    "                messages=[\n",
-    "                    {\"role\": \"system\", \"content\": SYSTEM_PROMPTS[api_type]},\n",
-    "                    {\"role\": \"user\", \"content\": prompt}\n",
-    "                ],\n",
-    "                max_tokens=config[\"max_tokens\"],\n",
-    "                temperature=config[\"temperature\"]\n",
-    "            )\n",
-    "            return response.choices[0].message.content\n",
-    "            \n",
-    "    except Exception as e:\n",
-    "        logger.error(f\"Error in {api_type} API request: {str(e)}\")\n",
-    "        raise\n"
+    "### API Call"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_api_request(client, api_type: str, content: str) -> str:\n",
+    "    \"\"\"Make API request with retries\"\"\"\n",
+    "\n",
+    "    prompt = get_requirements_refinement_prompt(content)\n",
+    "    \n",
+    "    # Create a rate limiter for this request\n",
+    "    rate_limiter = llm_utils.create_rate_limiter()\n",
+    "    rate_limit_func = llm_utils.create_rate_limit_function(rate_limiter, api_type)\n",
+    "    \n",
+    "    return llm_utils.make_llm_request(\n",
+    "        client=client,\n",
+    "        api_type=api_type,\n",
+    "        prompt=prompt,\n",
+    "        system_prompt=SYSTEM_PROMPTS[api_type],\n",
+    "        rate_limit_func=rate_limit_func\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Main Processing Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +281,7 @@
     "        requirements_content = f.read()\n",
     "    \n",
     "    # Initialize API clients\n",
-    "    clients = setup_clients()\n",
+    "    clients = llm_utils.setup_clients()\n",
     "    if api_type not in clients or clients[api_type] is None:\n",
     "        raise ValueError(f\"API client for {api_type} is not available\")\n",
     "    \n",
@@ -393,8 +316,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Main Execution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -538,16 +468,8 @@
       "================================================================================\n",
       "\n",
       "Most recent files:\n",
-      "1. claude_reqs_list_v1_20250416_113606.md (2025-04-16 11:36)\n",
-      "2. claude_reqs_list_v1_20250416_112958.md (2025-04-16 11:29)\n",
-      "3. claude_reqs_list_v1_20250416_112422.md (2025-04-16 11:24)\n",
-      "4. claude_reqs_list_v1_20250416_111547.md (2025-04-16 11:15)\n",
-      "5. claude_reqs_list_v1_20250416_103702.md (2025-04-16 10:37)\n",
-      "6. plan_net_gemini_requirements_list_20250402_145733.md (2025-04-02 14:57)\n",
-      "7. plan_net_gemini_20250402_145733.md (2025-04-02 14:57)\n",
-      "8. plan_net_claude_requirements_list_20250402_144346.md (2025-04-02 14:43)\n",
-      "9. plan_net_claude_20250402_144346.md (2025-04-02 14:43)\n",
-      "10. plan_net_gpt_requirements_list_20250402_135527.md (2025-04-02 13:55)\n",
+      "1. gemini_reqs_list_v1_20250423_140750.md (2025-04-23 14:07)\n",
+      "2. example_claude_reqs_list_v1_20250416_141301.md (2025-04-23 10:46)\n",
       "\n",
       "Options:\n",
       "- Select a number (1-10) to choose a file\n",
@@ -564,8 +486,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-16 11:45:59,918 - __main__ - INFO - Starting requirements refinement with claude\n",
-      "2025-04-16 11:45:59,944 - __main__ - INFO - Sending requirements to claude for refinement...\n"
+      "2025-04-30 12:11:25,133 - __main__ - INFO - Starting requirements refinement with claude\n",
+      "2025-04-30 12:11:25,160 - __main__ - INFO - Sending requirements to claude for refinement...\n"
      ]
     },
     {
@@ -580,8 +502,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-04-16 11:46:10,242 - httpx - INFO - HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
-      "2025-04-16 11:46:10,245 - __main__ - INFO - Requirements refinement complete. Output saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/claude_reqs_list_v2_20250416_114610.md\n"
+      "2025-04-30 12:11:37,035 - httpx - INFO - HTTP Request: POST https://api.anthropic.com/v1/messages \"HTTP/1.1 200 OK\"\n",
+      "2025-04-30 12:11:37,038 - __main__ - INFO - Requirements refinement complete. Output saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs_output/claude_reqs_list_v2_20250430_121137.md\n"
      ]
     },
     {
@@ -591,8 +513,8 @@
       "\n",
       "================================================================================\n",
       "Requirements Refinement Complete!\n",
-      "Input file: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/processed_output/claude_reqs_list_v1_20250416_113606.md\n",
-      "Refined requirements saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs/claude_reqs_list_v2_20250416_114610.md\n",
+      "Input file: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/initial_reqs_output/example_claude_reqs_list_v1_20250416_141301.md\n",
+      "Refined requirements saved to: /Users/ceadams/Documents/onclaive/onclaive/reqs_extraction/revised_reqs_output/claude_reqs_list_v2_20250430_121137.md\n",
       "API used: claude\n",
       "================================================================================\n"
      ]
