--- a/reqs_extraction/reqs_extraction.ipynb
+++ b/reqs_extraction/reqs_extraction.ipynb
@@ -995,7 +995,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ONCL310",
    "language": "python",
    "name": "python3"
   },
@@ -1009,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
